added more models

--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -4,6 +4,8 @@
     "bluetooth": [
         { "local_name": "AC200M*" },
         { "local_name": "AC300*" },
+        { "local_name": "AC500*" },
+        { "local_name": "AC60*" },
         { "local_name": "EB3A*" },
         { "local_name": "EP500*" },
         { "local_name": "EP600*" }
