--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -11,7 +11,7 @@ body:
       label: What happened?
       description: Also tell us, what did you expect to happen?
       placeholder: Tell us what you see!
-      value: ""
+      value: "An exception appeared"
     validations:
       required: true
   - type: dropdown
@@ -40,6 +40,8 @@ body:
         - EP500
         - EP500P
         - EP900
+    validations:
+      required: true
   - type: dropdown
     id: bluetooth
     attributes:
@@ -48,6 +50,8 @@ body:
       options:
         - USB dongle
         - ESPHome bluetooth proxy
+    validations:
+      required: true
   - type: dropdown
     id: options-changed
     attributes:
@@ -56,6 +60,8 @@ body:
       options:
         - No
         - Yes (Please write down the changed settings in the next step)
+    validations:
+      required: true
   - type: textarea
     id: options-details
     attributes:
