--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -8,7 +8,8 @@
         { "local_name": "AC60*" },
         { "local_name": "EB3A*" },
         { "local_name": "EP500*" },
-        { "local_name": "EP600*" }
+        { "local_name": "EP600*" },
+        { "local_name": "EP700*" }
     ],
     "codeowners": ["@Patrick762"],
     "config_flow": true,
@@ -18,5 +19,5 @@
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/Patrick762/hassio-bluetti-bt/issues",
     "requirements": ["bluetti_mqtt==0.15.0"],
-    "version": "0.0.11"
+    "version": "0.0.12"
 }
