--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -9,7 +9,8 @@
         { "local_name": "EB3A*" },
         { "local_name": "EP500*" },
         { "local_name": "EP600*" },
-        { "local_name": "EP760*" }
+        { "local_name": "EP760*" },
+        { "local_name": "PBOX*" }
     ],
     "codeowners": ["@Patrick762"],
     "config_flow": true,
@@ -19,5 +20,5 @@
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/Patrick762/hassio-bluetti-bt/issues",
     "requirements": ["bluetti_mqtt==0.15.0"],
-    "version": "0.0.14"
+    "version": "0.0.15"
 }
