--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -26,20 +26,10 @@ body:
       default: 0
     validations:
       required: true
-  - type: dropdown
+  - type: textarea
     id: device
     attributes:
       label: What device are you seeing the problem on?
-      multiple: true
-      options:
-        - AC60
-        - AC200M
-        - AC300
-        - AC500
-        - EB3A
-        - EP500
-        - EP500P
-        - EP900
     validations:
       required: true
   - type: dropdown
@@ -50,6 +40,7 @@ body:
       options:
         - USB dongle
         - ESPHome bluetooth proxy
+        - Internal bluetooth adapter
     validations:
       required: true
   - type: dropdown
