--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -14,21 +14,10 @@ body:
       value: "An exception appeared"
     validations:
       required: true
-  - type: dropdown
+  - type: textarea
     id: version
     attributes:
-      label: Version
-      description: What version of our software are you running?
-      options:
-        - 0.0.17
-        - 0.0.16
-        - 0.0.15
-        - 0.0.14
-        - 0.0.13
-        - 0.0.11
-        - 0.0.10
-        - 0.0.9
-      default: 0
+      label: What version of our software are you running?
     validations:
       required: true
   - type: textarea
