--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,13 +8,15 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
     steps:
-      - name: Setup Python
-        uses: actions/setup-python@v5.3.0
-        with:
-          python-version: 3
-      - name: Run unittests
-        run: python3 -m unittest discover -s tests -p "*_test.py"
+    - uses: actions/checkout@v4
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install unittest
+    - name: Run unittests
+      run: python3 -m unittest discover -s tests -p "*_test.py"
