--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -3,6 +3,7 @@
     "name": "Bluetti BT",
     "bluetooth": [
         { "local_name": "AC2A*" },
+        { "local_name": "AC2P*" },
         { "local_name": "AC60*" },
         { "local_name": "AC70*" },
         { "local_name": "AC180*" },
