--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -7,6 +7,7 @@
         { "local_name": "AC180*" },
         { "local_name": "AC200L*" },
         { "local_name": "AC200M*" },
+        { "local_name": "AC200PL*" },
         { "local_name": "AC300*" },
         { "local_name": "AC500*" },
         { "local_name": "EB3A*" },
