--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -6,9 +6,7 @@
         { "local_name": "AC60*" },
         { "local_name": "AC70*" },
         { "local_name": "AC180*" },
-        { "local_name": "AC200L*" },
-        { "local_name": "AC200M*" },
-        { "local_name": "AC200PL*" },
+        { "local_name": "AC200*" },
         { "local_name": "AC300*" },
         { "local_name": "AC500*" },
         { "local_name": "EB3A*" },
@@ -26,5 +24,5 @@
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/Patrick762/hassio-bluetti-bt/issues",
     "requirements": [],
-    "version": "0.1.5"
+    "version": "0.1.6"
 }
