--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -3,16 +3,17 @@
     "name": "Bluetti BT",
     "bluetooth": [
         { "local_name": "AC2A*" },
+        { "local_name": "AC50B*" },
         { "local_name": "AC60*" },
         { "local_name": "AC70*" },
         { "local_name": "AC180*" },
         { "local_name": "AC200*" },
         { "local_name": "AC300*" },
         { "local_name": "AC500*" },
-        { "local_name": "AP300*"},
+        { "local_name": "AP300*" },
         { "local_name": "EB3A*" },
-        { "local_name": "EL100V2*"},
-        { "local_name": "EL30V2*"},
+        { "local_name": "EL100V2*" },
+        { "local_name": "EL30V2*" },
         { "local_name": "EP500*" },
         { "local_name": "EP600*" },
         { "local_name": "EP760*" },
@@ -26,6 +27,6 @@
     "integration_type": "device",
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/Patrick762/hassio-bluetti-bt/issues",
-    "requirements": ["bluetti-bt-lib==0.1.4b2"],
+    "requirements": ["bluetti-bt-lib==0.1.4b3"],
     "version": "0.2.1"
 }
