--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -2,22 +2,11 @@
     "domain": "bluetti_bt",
     "name": "Bluetti BT",
     "bluetooth": [
-        { "local_name": "AC2A*" },
-        { "local_name": "AC50B*" },
-        { "local_name": "AC60*" },
-        { "local_name": "AC70*" },
-        { "local_name": "AC180*" },
-        { "local_name": "AC200*" },
-        { "local_name": "AC300*" },
-        { "local_name": "AC500*" },
-        { "local_name": "AP300*" },
+        { "local_name": "AC*" },
+        { "local_name": "AP*" },
         { "local_name": "EB3A*" },
-        { "local_name": "EL100V2*" },
-        { "local_name": "EL30V2*" },
-        { "local_name": "EP500*" },
-        { "local_name": "EP600*" },
-        { "local_name": "EP760*" },
-        { "local_name": "EP800*" },
+        { "local_name": "EL*" },
+        { "local_name": "EP*" },
         { "local_name": "PBOX*" }
     ],
     "codeowners": ["@Patrick762"],
