added unittest for manifest bt matchers

--- a/custom_components/bluetti_bt/manifest.json
+++ b/custom_components/bluetti_bt/manifest.json
@@ -2,11 +2,22 @@
     "domain": "bluetti_bt",
     "name": "Bluetti BT",
     "bluetooth": [
-        { "local_name": "AC*" },
-        { "local_name": "AP*" },
+        { "local_name": "AC1*" },
+        { "local_name": "AC2*" },
+        { "local_name": "AC3*" },
+        { "local_name": "AC5*" },
+        { "local_name": "AC6*" },
+        { "local_name": "AC7*" },
+        { "local_name": "AP3*" },
         { "local_name": "EB3A*" },
-        { "local_name": "EL*" },
-        { "local_name": "EP*" },
+        { "local_name": "EL1*" },
+        { "local_name": "EL2*" },
+        { "local_name": "EL3*" },
+        { "local_name": "EP5*" },
+        { "local_name": "EP6*" },
+        { "local_name": "EP7*" },
+        { "local_name": "EP8*" },
+        { "local_name": "Handsfree*" },
         { "local_name": "PBOX*" }
     ],
     "codeowners": ["@Patrick762"],
